# fastText-haskell

./: .gitignore  LICENSE  README.md  Test.hs  default.nix  fasttext.cabal  global.nix  nixpkgs.nix
Data/: FastText.hs
Data/FastText/: Internal.hsc
cbits/: extern.cc  extern.h
