cabal-version:       2.4
name:                fasttext
version:             0.1.0.0
license:             BSD-2-Clause
license-file:        LICENSE
author:              Kevin Brubeck Unhammer
category:            Natural Language Processing, Classification
maintainer:          kevin@trigram.no
build-type:          Simple


library
  build-depends:       base >=4.12 && <5
                     , bytestring
  exposed-modules:     Data.FastText
                     , Data.FastText.Internal
  default-language:    Haskell2010

  include-dirs: cbits
  cxx-sources: cbits/args.cc
               cbits/autotune.cc
               cbits/densematrix.cc
               cbits/dictionary.cc
               cbits/extern.cc
               cbits/fasttext.cc
               cbits/loss.cc
               cbits/matrix.cc
               cbits/meter.cc
               cbits/model.cc
               cbits/productquantizer.cc
               cbits/quantmatrix.cc
               cbits/utils.cc
               cbits/vector.cc
  -- from fastText's Makefile:
  cxx-options: -pthread -std=c++11 -march=native -O3 -funroll-loops -DNDEBUG
  extra-libraries: stdc++


test-suite test
  type:       exitcode-stdio-1.0
  main-is:             Test.hs
  other-modules:       Data.FastText
  build-depends:       base >=4.12 && <5
                     , bytestring
                     , fasttext
  default-language:    Haskell2010
